Restyle - Work in progress.

--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -202,5 +202,7 @@
         <script type="text/javascript" src="{{asset("javascript/system/RecoverPassword.js")}}"></script>
         <script type="text/javascript" src="{{asset("javascript/system/MenuUser.js")}}"></script>
         <script type="text/javascript" src="{{asset("javascript/system/Index.js")}}"></script>
+        
+        {{-include("@templateRoot/layout/layout_site_custom.html.twig")-}}
     </body>
 </html>
