--- a/symfony_fw/templates/microservice/api/basic/create.html.twig
+++ b/symfony_fw/templates/microservice/api/basic/create.html.twig
@@ -10,7 +10,13 @@
             {{form_row(form.token, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             {{form_row(form.ip, {'dense': "", 'styleType': "outlinedTrailing"})}}
             {{form_row(form.urlCallback, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            {{form_row(form.databaseIp, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            {{form_row(form.databaseName, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            {{form_row(form.databaseUsername, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            {{form_row(form.databasePassword, {'dense': "", 'styleType': "outlinedTrailing"})}}
             {{form_row(form.active)}}
+            {{form_row(form.slackActive)}}
+            {{form_row(form.lineActive)}}
 
             {{form_widget(form._token)}}
 
