--- a/symfony_fw/templates/render/control_panel/setting.html.twig
+++ b/symfony_fw/templates/render/control_panel/setting.html.twig
@@ -18,6 +18,17 @@
                 {% endfor %}
                 {{form_errors(form.templateColumn)}}
             </div>
+            
+            {{form_row(form.pageDate)}}
+            {{form_row(form.pageComment)}}
+            {{form_row(form.pageCommentActive)}}
+        </div>
+    </fieldset>
+    <fieldset class="accordion_container">
+        <legend>{% trans %}setting_4{% endtrans %}</legend>
+        <p>{% trans %}setting_5{% endtrans %}</p>
+        <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button">{% trans %}index_9{% endtrans %}</button>
+        <div class="accordion">
             <div>
                 {{form_row(form.language)}}
                 <i id="setting_language_manage_modify" class="material-icons cursor_custom">create</i>
@@ -25,12 +36,12 @@
                 <i id="setting_language_manage_delete" class="material-icons cursor_custom">remove</i>
             </div>
             <div id="setting_language_manage_container">
-                <p>{% trans %}setting_4{% endtrans %}</p>
+                <p>{% trans %}setting_6{% endtrans %}</p>
                 <div class="form_row">
                     <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-trailing-icon mdc-text-field--dense">
-                        <input id="form_setting_languageManage" class="mdc-text-field__input" type="text" name="form_setting[languageManage]" value="" autocomplete="off"/>
+                        <input id="form_setting_languageManageCode" class="mdc-text-field__input" type="text" name="form_setting[languageManageCode]" value="" autocomplete="off"/>
                         <i class="material-icons mdc-text-field__icon" tabindex="0" role="button">language</i>
-                        <label class="mdc-floating-label"></label>
+                        <label class="mdc-floating-label">{% trans %}setting_7{% endtrans %}</label>
                         <div class="mdc-notched-outline">
                             <svg>
                                 <path class="mdc-notched-outline__path"/>
@@ -44,7 +55,7 @@
                     <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-trailing-icon mdc-text-field--dense">
                         <input id="form_setting_languageManageDate" class="mdc-text-field__input" type="text" name="form_setting[languageManageDate]" value="" autocomplete="off"/>
                         <i class="material-icons mdc-text-field__icon" tabindex="0" role="button">language</i>
-                        <label class="mdc-floating-label"></label>
+                        <label class="mdc-floating-label">{% trans %}setting_8{% endtrans %}</label>
                         <div class="mdc-notched-outline">
                             <svg>
                                 <path class="mdc-notched-outline__path"/>
@@ -57,18 +68,8 @@
                 <i id="setting_language_manage_confirm" class="material-icons cursor_custom">check_circle_outline</i>
                 <i id="setting_language_manage_close" class="material-icons cursor_custom">highlight_off</i>
             </div>
-
-            {{form_row(form.pageDate)}}
-            {{form_row(form.pageComment)}}
-            {{form_row(form.pageCommentActive)}}
-        </div>
-    </fieldset>
-    <fieldset class="accordion_container">
-        <legend>{% trans %}setting_5{% endtrans %}</legend>
-        <p>{% trans %}setting_6{% endtrans %}</p>
-        <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button">{% trans %}index_9{% endtrans %}</button>
-        <div class="accordion">
-            {{form_row(form.emailAdmin, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            
+            {{form_row(form.emailAdmin, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "email"})}}
             {{form_row(form.websiteActive)}}
             
             <div id="setting_roleUserId" class="wordTag_container">
@@ -79,8 +80,8 @@
 
             {{form_row(form.https)}}
             {{form_row(form.registrationUserConfirmAdmin)}}
-            {{form_row(form.loginAttemptTime, {'dense': "", 'styleType': "outlinedTrailing"})}}
-            {{form_row(form.loginAttemptCount, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            {{form_row(form.loginAttemptTime, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+            {{form_row(form.loginAttemptCount, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             {{form_row(form.registration)}}
             {{form_row(form.recoverPassword)}}
             {{form_row(form.captcha)}}
@@ -88,23 +89,23 @@
         </div>
     </fieldset>
     <fieldset class="accordion_container">
-        <legend>{% trans %}setting_7{% endtrans %}</legend>
-        <p>{% trans %}setting_8{% endtrans %}</p>
-        <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button">{% trans %}index_9{% endtrans %}</button>
-        <div class="accordion">
-            {{form_row(form.payment)}}
-            {{form_row(form.payPalSandbox)}}
-            {{form_row(form.payPalBusiness, {'dense': "", 'styleType': "outlinedTrailing"})}}
-            {{form_row(form.payPalCurrencyCode, {'dense': "", 'styleType': "outlinedTrailing"})}}
-            {{form_row(form.payPalCreditAmount, {'dense': "", 'styleType': "outlinedTrailing"})}}
-        </div>
-    </fieldset>
-    <fieldset class="accordion_container">
         <legend>{% trans %}setting_9{% endtrans %}</legend>
         <p>{% trans %}setting_10{% endtrans %}</p>
         <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button">{% trans %}index_9{% endtrans %}</button>
         <div class="accordion">
+            {{form_row(form.payment)}}
             {{form_row(form.credit, {'dense': "", 'styleType': "outlinedTrailing"})}}
+        </div>
+    </fieldset>
+    <fieldset class="accordion_container">
+        <legend>{% trans %}setting_11{% endtrans %}</legend>
+        <p>{% trans %}setting_12{% endtrans %}</p>
+        <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button">{% trans %}index_9{% endtrans %}</button>
+        <div class="accordion">
+            {{form_row(form.payPalSandbox)}}
+            {{form_row(form.payPalBusiness, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+            {{form_row(form.payPalCurrencyCode, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+            {{form_row(form.payPalCreditAmount, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         </div>
     </fieldset>
     
