--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -268,6 +268,9 @@ table {
     padding: 0;
 }
 
+.mdc-chip {
+    @include user_select_none();
+}
 .mdc-chip--selected {
     .mdc-chip__icon--leading {
         opacity: 1 !important;
@@ -344,6 +347,8 @@ table {
         
         form {
             .mdc-text-field, .mdc-select {
+                @include user_select_none();
+                
                 width: 50%;
             }
             .mdc-select {
