--- a/symfony_fw/templates/render/control_panel/setting_slack_iw.html.twig
+++ b/symfony_fw/templates/render/control_panel/setting_slack_iw.html.twig
@@ -6,6 +6,8 @@
         <p>{% trans %}settingSlackIw_2{% endtrans %}</p>
         <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button">{% trans %}index_9{% endtrans %}</button>
         <div class="accordion">
+            <button class="mdc-button mdc-button--dense mdc-button--raised button_reset" type="button">{% trans %}settingSlackIw_3{% endtrans %}</button>
+            
             {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             {{form_row(form.hook, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             {{form_row(form.channel, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
