--- a/symfony_fw/templates/include/google_script.html.twig
+++ b/symfony_fw/templates/include/google_script.html.twig
@@ -1,10 +1,10 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116557983-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=1234"></script>
 <script>
     window.addEventListener("load", function() {
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-116557983-1');
+        gtag("js", new Date());
+        gtag("config", "UA-1234");
     });
 </script>
