--- a/symfony_fw/templates/render/control_panel/microservice_api_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_api_profile.html.twig
@@ -10,7 +10,7 @@
         <p>{% trans %}microserviceApiProfile_3{% endtrans %}</p>
         <form id="form_cp_microservice_api_profile" action="{{path("cp_microservice_api_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
-            {{form_row(form.controller, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+            {{form_row(form.controllerName, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             {{form_row(form.description, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             
             <div>
@@ -26,7 +26,7 @@
         </form>
     </fieldset>
     {% if response.values.id > 0 %}
-        {{-render(controller("App\\Controller\\Microservice\\Api\\" ~ response.values.microserviceApiEntity.name ~ "\\Api" ~ response.values.microserviceApiEntity.controller ~ "Controller::createAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
-        {{-render(controller("App\\Controller\\Microservice\\Api\\" ~ response.values.microserviceApiEntity.name ~ "\\Api" ~ response.values.microserviceApiEntity.controller ~ "Controller::selectAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+        {{-render(controller("App\\Controller\\Microservice\\Api\\" ~ response.values.microserviceApiEntity.name ~ "\\" ~ response.values.microserviceApiEntity.controllerName ~ "Controller::createAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+        {{-render(controller("App\\Controller\\Microservice\\Api\\" ~ response.values.microserviceApiEntity.name ~ "\\" ~ response.values.microserviceApiEntity.controllerName ~ "Controller::selectAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
     {% endif %}
 {% endif %}
